--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Click on the screen to start the game. Use the arrow keys to move the antiobiotic and kill the bacteria. Click on the screen to restart.
+		    Click on the screen to start the game. Use the arrow keys to move the antiobiotic and kill the bacteria.<br>Be careful, some of the bacteria are extremely resistant and won't die! Click on the screen to restart.
 	    </footer>
 	</body>
 </html>
